edit routes some routes for github pages

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <!-- custom style -->
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main id="root" class="container">
@@ -70,6 +68,6 @@
         <!-- here where your views changes -->
       </main>
     </main>
-    <script src="/router.js" defer></script>
+    <script src="/SPA-NoFrameWork-Explained/router.js" defer></script>
   </body>
 </html>
