reverse to last commit

--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
         <!-- here where your views changes -->
       </main>
     </main>
-    <script src="/SPA-NoFrameWork-Explained/router.js" defer></script>
+    <script src="/router.js" defer></script>
   </body>
 </html>
