--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
   </head>
   <body>
-    <main id="root" class="container">
+    <main class="container">
       <nav>
         <ul>
           <li>
