auto detect all anchor tags

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </ul>
         <ul>
           <li>
-            <a onclick="route()" href="/">Home</a>
+            <a href="/">Home</a>
           </li>
-          <li><a onclick="route()" href="/about">About</a></li>
-          <li><a onclick="route()" href="/404">404</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/404">404</a></li>
           <li>
             <a href="https://twitter.com/ahmedrowaihi" role="button">
               <i class="fa-brands fa-twitter"></i>
